--- a/rockclimb/rockclimb_app/templates/rockclimb_app/base_template.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/base_template.html
@@ -1,10 +1,8 @@
 {% load static %}
-
-
 <!DOCTYPE html>
 <html lang="en">
  <head>
-   <title>UCCS CS Students</title>
+   <title>Rock Climbing Enthusiast</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Bootstrap demo</title>
@@ -16,7 +14,7 @@
    <div class="container-fluid">
      <!-- Navbar-->
      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-       <img src="{% static 'images/rockclimbart.gif' %}">
+       <img src="{% static 'images/art.gif' %}" style="width: 100px; height: auto;">
        <div class="container-fluid">
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
@@ -36,8 +34,6 @@
          </div>
        </div>
      </nav>
-
-
        <div class="col-sm-10">
          <!-- add block content from html template -->
          {% block content %}
