--- a/rockclimb/rockclimb_app/templates/rockclimb_app/index.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/index.html
@@ -4,10 +4,10 @@
 
 <!-- Replace block content in base_template.html -->
 {% block content %}
-<h1>Computer Science Portfolios</h1>
+<h1>Accurate Rock Climbing Grader</h1>
 
 
-<h2>More to come from [and your name goes here]</h2>
+
 
 
 {% endblock %}
