--- a/rockclimb/rockclimb_app/templates/rockclimb_app/rockVideo_detail.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/rockVideo_detail.html
@@ -70,8 +70,9 @@
     {% else %}
     <p>No media available.</p>
     {% endif %}
-
 </div>
-
+<div>
+  <a href="{% url 'index' %}" class="btn btn-primary">Back to Routes</a>
+</div>
 
 {% endblock %}
