--- a/rockclimb/rockclimb_app/templates/rockclimb_app/rockVideo_detail.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/rockVideo_detail.html
@@ -55,7 +55,7 @@
   </style>
 <div>
     <h1><strong>Route Title: {{ rockVideo.title }}</strong></h1>
-    <p><strong>Route Active: </strong>{{rockVideo.is_active}}</p>
+    <p><strong>Is the Route Still Up: </strong>{{rockVideo.is_active}}</p>
     <p><strong>Gym Name: </strong>{{rockVideo.gym_name}}</p>
     <p><strong>Gym Address: </strong>{{rockVideo.gym_address}}</p>
     <p><strong>About: </strong>{{rockVideo.about}}</p>
