--- a/rockclimb/rockclimb_app/templates/rockclimb_app/base_template.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/base_template.html
@@ -22,8 +22,8 @@
          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
            <div class="navbar-nav">
              <!--  {% url 'index' %}  is defined in url path to dynamically create url -->
-             <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-             <a class="nav-link" href="#">Menu 2</a>
+             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+             <a class="nav-link active" aria-current="page" href="{% url 'index' %}">List of Routes Up</a>
              <a class="nav-link" href="#">Menu 3</a>
              {% if user.is_authenticated %}
              <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
@@ -34,6 +34,11 @@
          </div>
        </div>
      </nav>
+    <!-- Image of the mountain range -->
+    <div class="mountain-range">
+      <img src="{% static 'images/range.gif' %}" alt="Mountain Range" style="width: 100%; height: auto; display: block;">
+    </div>
+
        <div class="col-sm-10">
          <!-- add block content from html template -->
          {% block content %}
