--- a/rockclimb/rockclimb_app/templates/rockclimb_app/base_template.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/base_template.html
@@ -7,13 +7,25 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Bootstrap demo</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+   <style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f5f5f5; /* This sets the background of the entire page */
+        margin: 0;
+        padding: 0;
+    }
+    .navbar-custom {
+        background-color: #f0e9d6 !important; /* Cream white color */
+    }
+</style>
  </head>
 
 
  <body>
+
    <div class="container-fluid">
      <!-- Navbar-->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <nav class="navbar navbar-expand-lg navbar-custom">
        <img src="{% static 'images/art.gif' %}" style="width: 100px; height: auto;">
        <div class="container-fluid">
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
