--- a/rockclimb/rockclimb_app/templates/rockclimb_app/rockVideo_detail.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/rockVideo_detail.html
@@ -70,6 +70,8 @@
     {% else %}
     <p>No media available.</p>
     {% endif %}
+    
+  </form>
 </div>
 <div>
   <a href="{% url 'index' %}" class="btn btn-primary">Back to Routes</a>
