--- a/rockclimb/rockclimb_app/templates/rockclimb_app/base_template.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/base_template.html
@@ -36,12 +36,12 @@
              <!--  {% url 'index' %}  is defined in url path to dynamically create url -->
              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">List of Routes Up</a>
-             <a class="nav-link" href="#">Menu 3</a>
              {% if user.is_authenticated %}
-             <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
-             {% else %}
-             <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
-             {% endif %}
+            <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{ user.username }}</a>
+            {% else %}
+            <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
+            <a class="nav-link" href="{% url 'register' %}">Register</a> <!-- Added Register Link -->
+            {% endif %}
            </div>
          </div>
        </div>
