Testing for register page now works.

--- a/rockclimb/rockclimb_app/templates/rockclimb_app/register.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/register.html
@@ -4,6 +4,5 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Register</button>
-</form>
+    <button type="submit" id="submit">Register</button></form>
 {% endblock %}
