All test case have been added and are working

--- a/rockclimb/rockclimb_app/templates/rockclimb_app/index.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/index.html
@@ -91,7 +91,10 @@
         </div>
       </div>
     {% empty %}
-      <p>No active routes found.</p>
+    {% if not rockVideos %}
+    <p>No active rock climbing videos or images</p>
+    {% endif %}
+  
     {% endfor %}
 
   </div>
