--- a/rockclimb/rockclimb_app/templates/rockclimb_app/home.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/home.html
@@ -1,7 +1,51 @@
 {% extends "rockclimb_app/base_template.html" %}
-
 {% block content %}
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+    color: black; 
+    background-color: #fff;
+    line-height: 1.6; 
+    padding: 20px; 
+  }
+
+ 
+  h1 {
+    text-align: center;
+    font-size: 2.5em; 
+    margin: 0.5em 0; 
+    font-weight: bold; 
+  }
+  h2 {
+    text-align: center;
+    font-size: 2.5em; 
+    margin: 0.5em 0; 
+  }
+ 
+  p {
+    max-width: 800px; 
+    margin: auto; 
+    text-align: center; 
+    font-size: 1em; 
+  }
+
+  .about {
+    border-top: 2px solid #aaa; 
+    border-bottom: 2px solid #aaa; 
+    padding: 2em 0; 
+  }
+
+  main.container {
+    width: 80%; 
+    max-width: 1200px;
+    margin: 0 auto; 
+    padding: 20px; 
+  }
+</style>
+
+<div classs="about">
 <main class="container" role="main">
+  <hr style="border: 0; height: 2px; background-color: black; margin: 20px 0;">
     <header>
       <h1>Welcome to Rock Climbing Routes</h1>
     </header>
@@ -17,5 +61,7 @@
       <h2 id="exploring-routes">Exploring Routes</h2>
       <p>It also helps new climbers explore the best climbing routes submitted by our community in different gyms.</p>
     </section>
+    <hr style="border: 0; height: 2px; background-color: black; margin: 20px 0;">
   </main>
+</div>
 {% endblock %}
