--- a/rockclimb/rockclimb_app/templates/rockclimb_app/home.html
+++ b/rockclimb/rockclimb_app/templates/rockclimb_app/home.html
@@ -1,5 +1,13 @@
 {% extends "rockclimb_app/base_template.html" %}
+{% load static %}
 {% block content %}
+<div class="mountain-range">
+  <video autoplay loop muted playsinline style="width: 100%; max-height: 500px; display: block; object-fit: cover;">
+    <source src="{% static 'images/mixkit-man-doing-mountaineering-on-a-large-rocky-mountain-41084-medium.mp4' %}" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
 <style>
   body {
     font-family: 'Arial', sans-serif;
@@ -64,4 +72,7 @@
     <hr style="border: 0; height: 2px; background-color: black; margin: 20px 0;">
   </main>
 </div>
+<footer style="text-align: center; padding: 20px 0;">
+  <img src="{% static 'images/social_media_icons.gif' %}" alt="Footer Image" style="width: auto; max-height: 150px; height: auto;">
+</footer>
 {% endblock %}
